@@ -80,6 +80,7 @@ lilypond_omfdir = $(local_package_omfdir)
 webdir = $(lilypond_docdir)/html
 vimdir = $(lilypond_datadir)/vim
 
+AR = @AR@
 BASH = @BASH@
 BISON = @BISON@
 CC = @CC@
@@ -102,6 +103,7 @@ GUILE_LDFLAGS = @GUILE_LDFLAGS@
 ICFLAGS = @ICFLAGS@
 ILDFLAGS = @ILDFLAGS@
 INIMETAFONT = @INIMETAFONT@
+INSTALL = @INSTALL@
 KPATHSEA_LIBS = @KPATHSEA_LIBS@
 LD = @LD@
 LINK_GXX_STATICALLY = @LINK_GXX_STATICALLY@
@@ -119,6 +121,7 @@ PERL = @PERL@
 PLATFORM_WINDOWS = @PLATFORM_WINDOWS@
 PYTHON = @PYTHON@
 RANLIB = @RANLIB@
+RANLIB = @RANLIB@
 ROOTSEP = @ROOTSEP@
 SHELL = @SHELL@
 SPLITTING_MAKEINFO = @SPLITTING_MAKEINFO@
@@ -126,5 +129,3 @@ TAR = @TAR@
 WINDRES = @WINDRES@
 YACC = @YACC@
 ZIP = @ZIP@
-AR = @AR@
-RANLIB = @RANLIB@
